# FleetSnowfluff

./: .gitignore  LICENSE  README.md  debug_macos.sh  main.py  pyproject.toml  release_macos.sh
app/: aemeath.py  chat_window.py  design_tokens.py  fluent_compat.py  music_window.py  qt_env.py  seal_widget.py  settings_dialog.py  transform_window.py  ui_scale.py  with_you.py
app/aemeath/: __init__.py  settings_dialog.py  transform_window.py  window.py
app/chat_window/: __init__.py  api.py  storage.py  styles.py  widgets.py  window.py
app/music_window/: __init__.py  marquee_label.py  mini_player_bar.py  mini_playlist_panel.py  playlist_tree.py  styles.py  types.py  utils.py  window.py
app/utils/: __init__.py  fluent_compat.py  qt_env.py  ui_scale.py
app/with_you/: __init__.py  aurora.py  draw_canvas.py  mini_call_bar.py  mini_star_overlay.py  sticky_note.py  styles.py  window.py
config/: FleetSnowfluff.json
dmg_stage/: Uninstall and Cleanup.command
windows-toolkit/: convert_mov_to_mp4.ps1  release_windows.ps1
