[project]
name = "FleetSnowfluff"
version = "v1.2.0beta1"
description = "Aemeath on your desktop."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47.0",
    "openai>=2.20.0",
    "openapi>=2.0.0",
    "pyinstaller>=6.18.0",
    "pyside6>=6.10.2",
    "pyside6-fluent-widgets>=1.7.5",
    "qtawesome>=1.4.0",
]
